[workspace]
members = [
    "crates/chain_info",
    "crates/text"
]

[package]
name = "inachus"
version = "0.1.0"
edition = "2021"

[dependencies]
chain_info = { path = "crates/chain_info" }
text = { path = "crates/text" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
toml = "0.8.2"
lazy_static = "1.5.0"
regex = "1.11.1"
