[workspace]
members = [
    "crates/chain_info",
    "crates/text"
]

[package]
name = "inachus"
version = "0.1.0"
edition = "2021"

[dependencies]
chain_info = { path = "crates/chain_info" }
text = { path = "crates/text" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.2"
lazy_static = "1.5.0"
regex = "1.11.1"
alloy-primitives = "0.6.3"
alloy-sol-types = "0.6.3"
alloy-json-abi = "0.6.3"
alloy-providers = "0.6.3"
alloy-signer = "0.6.3"
alloy-transport = "0.6.3"
alloy-transport-http = "0.6.3"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
inquire = "0.7"
colored = "2.1"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = "0.3"

[lib]
name = "inachus"
path = "src/lib.rs"

[[bin]]
name = "inachus"
path = "bin/inachus/main.rs"
