[workspace]
members = [
    "crates/chain_info",
    "crates/text"
]

[package]
name = "inachus"
version = "0.1.0"
edition = "2021"

[dependencies]
chain_info = { path = "crates/chain_info" }
text = { path = "crates/text" }
tokio = { version = "1.28", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
toml = "0.8.2"
lazy_static = "1.5.0"
regex = "1.11.1"
alloy = { version = "0.12", features = [
    "eips",
    "full",
    "hyper",
    "json-rpc",
    "node-bindings",
    "rpc-client",
    "rpc-types-debug",
    "rpc-types-trace",
    "signer-aws",
    "signer-gcp",
    "signer-keystore",
    "signer-ledger",
    "signer-mnemonic",
    "signer-trezor",
    "signer-yubihsm",
] }
alloy-json-abi = "0.12"
alloy-primitives = "0.12"
alloy-providers = "0.12"
alloy-signer = "0.12"
alloy-transport-http = "0.12"
hex = "0.4"
humantime = "2.1"
anyhow = "1.0"
thiserror = "1.0"
dirs = "5.0"
inquire = "0.7"
colored = "2.1"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }

[lib]
name = "inachus"
path = "src/lib.rs"

[[bin]]
name = "inachus"
path = "bin/inachus/main.rs"
